force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/CQ_NN_Closure_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Closure_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closure Approval Required?</label>
    <type>Checkbox</type>
</CustomField>