force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/CQ_NN_Closure_Approver__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Closure_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closure Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CQ_NN_Closure_Approval_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>