force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/CQ_NN_Effectiveness_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Effectiveness_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Effectiveness Approval Required</label>
    <type>Checkbox</type>
</CustomField>