force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/CQ_NN_Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality Incident</fullName>
            </value>
            <value>
                <fullName>Nonconformance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>