force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/CQ_NN_Product_Operational_Risk__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Product_Operational_Risk__c</fullName>
    <label>Product Operational Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negligible</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Serious</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>