force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/CQ_NN_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Responsibility__c</fullName>
    <label>Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Internal &amp; Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>