force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/CQ_NN_Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Severity_Level__c</fullName>
    <formula>CASE(
    MAX(
        CASE(TEXT(CQ_NN_HSE_Risk_Severity__c), &quot;Negligible&quot;, 1, &quot;Light&quot;, 2, &quot;Serious&quot;, 3, &quot;Major&quot;, 4, &quot;Catastrophic&quot;, 5, 0),
        CASE(TEXT(CQ_NN_Customer_Impact__c), &quot;Negligible&quot;, 1, &quot;Light&quot;, 2, &quot;Serious&quot;, 3, &quot;Major&quot;, 4, &quot;Catastrophic&quot;, 5, 0),
        CASE(TEXT(CQ_NN_Internal_Fiscal_Liability__c), &quot;Negligible&quot;, 1, &quot;Light&quot;, 2, &quot;Serious&quot;, 3, &quot;Major&quot;, 4, &quot;Catastrophic&quot;, 5, 0),
        CASE(TEXT(CQ_NN_Product_Operational_Risk__c), &quot;Negligible&quot;, 1, &quot;Light&quot;, 2, &quot;Serious&quot;, 3, &quot;Major&quot;, 4, &quot;Catastrophic&quot;, 5, 0),
        CASE(TEXT(CQ_NN_Unique_or_Systemic__c), &quot;Negligible&quot;, 1, &quot;Light&quot;, 2, &quot;Serious&quot;, 3, &quot;Major&quot;, 4, &quot;Catastrophic&quot;, 5, 0)
    ),
    1, &quot;Negligible&quot;,
    2, &quot;Light&quot;,
    3, &quot;Serious&quot;,
    4, &quot;Major&quot;,
    5, &quot;Catastrophic&quot;,
    &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Severity Level</label>
    <type>Text</type>
</CustomField>