force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/CQ_NN_Unique_or_Systemic__c.field-meta.xml
<CustomField>
    <fullName>CQ_NN_Unique_or_Systemic__c</fullName>
    <label>Unique or Systemic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negligible</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Serious</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>